--- a/src/App.css
+++ b/src/App.css
@@ -10,16 +10,14 @@ body {
     align-items: center;
     background-color: rgba(0,0,0,0.8);
 }
+h1 {
+    font-size: 3rem;
+}
+p {
+    font-size: 18px;
+}
 .calculator {
     width: 600px;
-}
-.buttons {
-    height: 400px;
-    padding: 2px;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 2px;
-    background-color: #000;
 }
 .view {
     height: 200px;
@@ -31,9 +29,18 @@ body {
 .view div {
     height: 50%;
 }
-h1 {
-    font-size: 3rem;
+.inputs {
+    padding: 2px;
+    background-color: #000;
 }
-p {
-    font-size: 18px;
+.buttons {
+    height: 400px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 2px;
+}
+.equals button {
+    width: 100%;
+    height: 64px;
+    padding: 2px;
 }
