--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,74 @@
+@import 'https://fonts.googleapis.com/css2?family=Quicksand&display=swap';
+
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Quicksand', sans-serif;
+}
+*:hover, *:focus, *:active {
+    outline: none;
 }
 body {
     min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgba(0,0,0,0.8);
+    background-color: rgba(126, 185, 185, 0.8);
+    letter-spacing: 0.3rem;
 }
 h1 {
     font-size: 3rem;
+    color: #fff;
 }
 p {
     font-size: 18px;
+    color: rgba(255, 255, 255,0.5)
 }
 .calculator {
-    width: 600px;
+    width: 500px;
+    padding: 30px;
+    border-radius: 20px;
+    background-color: #374353;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
 }
 .view {
-    height: 200px;
-    padding: 20px;
-    border: 4px solid black;
+    height: 125px;
+    margin-bottom: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     text-align: right;
-    background-color: #fff;
-}
-.view div {
-    height: 50%;
 }
 .buttons {
-    height: 400px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-gap: 2px;
-    padding: 2px;
-    background-color: #000;
+    grid-gap: 30px;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+}
+button {
+    height: 75px;
+    font-size: 1.5rem;
+    color: aliceblue;
+    background-color: rgb(55, 67, 83);
+    border: none;
+    box-shadow: 0px 0px 15px rgba(255, 255, 255,0.2);
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+}
+button:hover {
+    background-color: rgba(28, 86, 173, 0.2);
+    transition: 0.5s;
+    outline: none;
+    -webkit-transition: 0.5s;
+    -moz-transition: 0.5s;
+    -ms-transition: 0.5s;
+    -o-transition: 0.5s;
 }
