--- a/src/App.css
+++ b/src/App.css
@@ -56,7 +56,7 @@ button {
     color: aliceblue;
     background-color: rgb(55, 67, 83);
     border: none;
-    box-shadow: 0px 0px 20px rgba(255, 255, 255,0.2);
+    box-shadow: 0px 0px 30px rgb(42, 51, 63);
     border-radius: 10px;
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
